k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    app.kubernetes.io/name: profile-crafter
