k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-crafter
  labels:
    app: profile-crafter
spec:
  selector:
    app: profile-crafter
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
